--- a/site/style.css
+++ b/site/style.css
@@ -136,121 +136,17 @@ thead .stats {
   margin-left: 4px;
 }
 
-.stat-v8 {
-  background: #498af4;
+.stat-node {
+  background: #68bc4a;
 }
 
-.stat-sm {
-  background: #ffd681;
+.stat-bun {
+  background: #fbf0df;
   color: #000408;
 }
 
-.stat-jsc {
-  background: #003550;
-}
-
-.stat-hermes {
-  background: #2bb673;
-}
-
-.stat-chakra {
-  background: #1d6acf;
-}
-
-.stat-kiesel {
-  background: #f0dc4e;
-  color: #000408;
-}
-
-.stat-libjs {
-  background: #ef4946;
-}
-
-.stat-engine262 {
-  background: #22b2da;
-}
-
-.stat-qjs {
-  background: #c0c4c8;
-  color: #000408;
-}
-
-.stat-qjs_ng {
-  background: rgb(44, 44, 41);
-}
-
-.stat-xs {
-  background: #08306e;
-}
-
-.stat-graaljs {
-  background: #f29111;
-  color: #000408;
-}
-
-.stat-babel {
-  background: #f8c10d;
-  color: #000408;
-}
-
-.stat-swc {
-  background: #fd9b77;
-  color: #000408;
-}
-
-.stat-rhino {
-  background: #d0d0d0;
-  color: #000408;
-}
-
-.stat-nashorn {
-  background: #717171;
-}
-
-.stat-boa {
-  background: #ffff00;
-  color: #000408;
-}
-
-.stat-sucrase {
-  background: #f6f6f6;
-  color: #000408;
-}
-
-.stat-v8_exp {
-  background: #296ad1;
-}
-
-.stat-sm_exp {
-  background: #d4ab59;
-  color: #000408;
-}
-
-.stat-porffor {
-  background: #9c60e0;
-}
-
-.no-stat-v8 #content .stat-v8,
-.no-stat-sm #content .stat-sm,
-.no-stat-jsc #content .stat-jsc,
-.no-stat-chakra #content .stat-chakra,
-.no-stat-graaljs #content .stat-graaljs,
-.no-stat-hermes #content .stat-hermes,
-.no-stat-kiesel #content .stat-kiesel,
-.no-stat-libjs #content .stat-libjs,
-.no-stat-engine262 #content .stat-engine262,
-.no-stat-qjs #content .stat-qjs,
-.no-stat-qjs_ng #content .stat-qjs_ng,
-.no-stat-xs #content .stat-xs,
-.no-stat-babel #content .stat-babel,
-.no-stat-swc #content .stat-swc,
-.no-stat-rhino #content .stat-rhino,
-.no-stat-nashorn #content .stat-nashorn,
-.no-stat-boa #content .stat-boa,
-.no-stat-sucrase #content .stat-sucrase,
-.no-stat-v8_exp #content .stat-v8_exp,
-.no-stat-sm_exp #content .stat-sm_exp,
-.no-stat-porffor #content .stat-porffor {
+.no-stat-node #content .stat-node,
+.no-stat-bun #content .stat-bun {
   width: 0 !important;
   height: 0 !important;
   overflow: hidden !important;
